BE: Updated Swagger for post and comment
